# mini_curso_flet

./: README.md  pyproject.toml  requirements.txt  routes.py  views.py
.github/workflows/: build.yml
src/: app_cursos.py  clase_boton.py  main.py  menu.py  menu_barra_app.py  menu_custom_icons.py  menu_darkmode_redes.py  theme.py  views.py
