[project]
name = "retired64"
version = "0.1.0"
description = "Buscar repos de actus de github"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "ANOG", email = "andromux@proton.me" }
]
dependencies = [
  "flet==0.28.3",
  "httpx==0.28.1",
]

[tool.flet]
# org name in reverse domain name notation, e.g. "com.mycompany".
# Combined with project.name to build bundle ID for iOS and Android apps
org = "com.andromux.org"

# project display name that is used as an app title on Android and iOS home screens,
# shown in window titles and about app dialogs on desktop.
product = "Retired64 search apk"

# company name to display in about app dialogs
company = "retired64"

# copyright text to display in about app dialogs
copyright = "Copyright (C) 2025 by Andromux"

[tool.flet.app]
path = "src"

[tool.uv]
dev-dependencies = [
    "flet[all]==0.27.6",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
flet = {extras = ["all"], version = "0.27.6"}

[tool.flet.android]
split_per_abi = true
dependencies = [
  "flet==0.28.3",
  "flet-permission-handler==0.1.0"
]

[tool.flet.android.permission]
"android.permission.INTERNET" = true
